--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 <body>
     <div id="child">
-        <h4>💗ANH YÊU EM NHIỀU</h4>
+        <h4>💗Anh Khôi là của bé Nga</h4>
     </div>
     <!--这里写名字❤！！！-->
     <canvas id="pinkboard"></canvas>
